fix for film-main-slideshow swipe out of bounds

--- a/packages/ndla-ui/src/NDLAFilm/component.film-movielist.scss
+++ b/packages/ndla-ui/src/NDLAFilm/component.film-movielist.scss
@@ -69,33 +69,46 @@
         .c-icon {
           opacity: 0.7;
         }
-        &:first-child {
-          .c-icon {
-            transform: translate(-$spacing--small, -$spacing);
+        @include mq(wide) {
+          &:first-child {
+            .c-icon {
+              transform: translate(-$spacing--small / 2, -$spacing);
+            }
           }
-        }
-        &:nth-child(2) {
-          .c-icon {
-            transform: translate($spacing--small, -$spacing);
+          &:nth-child(2) {
+            .c-icon {
+              transform: translate($spacing--small / 2, -$spacing);
+            }
           }
         }
       }
     }
     .c-film-movielist__carousel-buttons {
-      &:first-child {
-        .c-icon {
-          transform: translate(0, -$spacing);
+      @include mq($until: tabletWide) {
+        &:first-child {
+          transform: translate($spacing--small / 2, 0);
+        }
+        &:nth-child(2) {
+          transform: translate(-$spacing--small / 2, 0);
         }
       }
-      &:nth-child(2) {
-        .c-icon {
-          transform: translate(0, -$spacing);
+      @include mq(tabletWide) {
+        &:first-child {
+          .c-icon {
+            transform: translate(0, -$spacing);
+          }
+        }
+        &:nth-child(2) {
+          .c-icon {
+            transform: translate(0, -$spacing);
+          }
         }
       }
     }
   }
 
   &__carousel-buttons {
+    cursor: pointer;
     display: flex;
     background: #091a2a80;
     border: 0;
@@ -104,13 +117,29 @@
     top: 0;
     align-items: center;
     justify-content: center;
-    cursor: pointer;
+    width: $spacing * 2;
+    transition: background 200ms ease;
+    @include mq(wide) {
+      width: $spacing * 3.5;
+    }
+    @include mq($until: tabletWide) {
+      top: $spacing;
+      bottom: auto;
+      width: $spacing * 2;
+      height: $spacing * 2;
+      background: none;
+      border-radius: 100%;
+    }
     .c-icon {
       fill: #fff;
       opacity: 0;
-      width: $spacing * 3;
-      height: $spacing * 3;
+      width: $spacing * 1.5;
+      height: $spacing * 1.5;
       transition: transform 400ms ease, opacity 400ms ease;
+      @include mq(wide) {
+        width: $spacing * 3;
+        height: $spacing * 3;
+      }
     }
     &:focus, &:hover {
       background: #091a2aC2 !important;
